<resources>
    <string name="app_name">CarWash</string>
    <string name="txt_nama_konsumen">Nama Konsumen</string>
    <string name="txt_tipe_jasa">Tipe Jasa</string>
    <string name="txt_no_pol">Nomor Polisi</string>
    <string name="txt_nama_mobil">Nama Mobil</string>
    <string name="txt_total_biaya">Total Biaya</string>
    <string name="btn_submit">Submit</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>

    <string-array name="tipe_jasa_array">
        <item>Cuci Mobil Manual</item>
        <item>Cuci Mobil Waterless</item>
        <item>Cuci Mobil Touchless</item>
        <item>Cuci Mobil Robotic</item>
        <item>Cuci Mobil Hidrolik</item>
    </string-array>

    <string name="nama_submit">nama : %1$s</string>
    <string name="jasa_submit">Jasa : %1$s</string>
    <string name="mobil_submit">Mobil : %1$s</string>
    <string name="biaya_submit">Biaya : %1$s</string>
    <string name="kembalian_submit">Kembalian : %1$s</string>
    <string name="txt_bayar">Bayar</string>
    <string name="noPol_submit">No Polisi : %1$s</string>
    <string name="bayar_submit">Bayar : %1$s</string>

    <string name="bayar_invalid">Bayar Invalid</string>
    <string name="nama_invalid">Nama Invalid</string>
    <string name="jasa_invalid">Jasa Invalid</string>
    <string name="mobil_invalid">Mobil Invalid</string>
    <string name="biaya_invalid">Biaya Invalid</string>
    <string name="bayar_kurang">Bayar Kurang</string>
    <string name="reset_berhasil">Reset Berhasil</string>
    <string name="submit_berhasil">Submit Berhasil</string>
    <string name="nopol_invalid">Nomor Polisi Invalid</string>
    <string name="btn_reset">Reset</string>
    <string name="about">Carwash adalah aplikasi pencatatan jasa pencucian kendaraan mobil.\nAplikasi Carwash ini pemilik serta karyawan mendapatkan kemudahan dalam mengolah data perusahaan dengan baik, benar, efektif dan efesien dalam melakukan pendataan dan tracking data.</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="konfirmasi_hapus_satu">Hapus histori id %1$s ?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="bagikan">Bagikan</string>
    <string name="detail">Detail</string>
    <string name="switch_layout">Ubah tampilan</string>

    <string name="koneksi_error">Koneksi error</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>

    <string name="notif_title">Ada customer baru!</string>
    <string name="notif_text">Lihat detail sekarang</string>


</resources>