<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="68dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/car_wash" />

    <TextView
        android:id="@+id/txt_nama_konsumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:labelFor="@id/nama_konsumen_inp"
        android:text="@string/txt_nama_konsumen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/nama_konsumen_inp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/txt_nama_konsumen"
        app:layout_constraintTop_toBottomOf="@+id/txt_nama_konsumen" />

    <TextView
        android:id="@+id/txt_tipe_jasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@id/tipe_jasa_spinner"
        android:text="@string/txt_tipe_jasa"
        app:layout_constraintStart_toStartOf="@+id/nama_konsumen_inp"
        app:layout_constraintTop_toBottomOf="@+id/nama_konsumen_inp" />

    <Spinner
        android:id="@+id/tipe_jasa_spinner"
        android:layout_width="341dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/txt_tipe_jasa"
        app:layout_constraintTop_toBottomOf="@+id/txt_tipe_jasa" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@id/no_pol_inp"
        android:text="@string/txt_no_pol"
        app:layout_constraintStart_toStartOf="@+id/tipe_jasa_spinner"
        app:layout_constraintTop_toBottomOf="@+id/tipe_jasa_spinner" />

    <EditText
        android:id="@+id/no_pol_inp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txt_nama_mobil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@id/nama_mobil_inp"
        android:text="@string/txt_nama_mobil"
        app:layout_constraintStart_toStartOf="@+id/no_pol_inp"
        app:layout_constraintTop_toBottomOf="@+id/no_pol_inp" />

    <EditText
        android:id="@+id/nama_mobil_inp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/txt_nama_mobil"
        app:layout_constraintTop_toBottomOf="@+id/txt_nama_mobil" />

    <TextView
        android:id="@+id/txt_total_biaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@id/total_biaya_inp"
        android:text="@string/txt_total_biaya"
        app:layout_constraintStart_toStartOf="@+id/nama_mobil_inp"
        app:layout_constraintTop_toBottomOf="@+id/nama_mobil_inp" />

    <EditText
        android:id="@+id/total_biaya_inp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/txt_total_biaya"
        app:layout_constraintTop_toBottomOf="@+id/txt_total_biaya" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_biaya_inp" />

</androidx.constraintlayout.widget.ConstraintLayout>